--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -228,8 +228,7 @@ android:layout_marginRight="8dp"
                             android:id="@+id/aboutusimage"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:foreground="@drawable/shape"
-
+android:foreground="#80000000 "
 
                             android:scaleType="centerCrop"
                             android:src="@drawable/aboutus" />
