--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -426,7 +426,7 @@ android:foreground="#80000000 "
                             android:id="@+id/paperimage"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:foreground="@drawable/shape"
+                            android:foreground="#80000000"
                             android:scaleType="centerCrop"
                             android:src="@drawable/paper" />
 
