--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -465,11 +465,11 @@
                             android:fontFamily="sans-serif-condensed"
                             android:onClick="paperexpand"
                             android:padding="4dp"
-                            android:text="click to know more"
+                            android:text="click here"
                             android:textAllCaps="true"
                             android:textColor="#000000"
                             android:textSize="15sp"
-                            android:textStyle="italic"
+                            android:textStyle="bold"
                             android:transitionName="@string/simple1" />
 
                     </LinearLayout>
