--- a/app/src/main/res/layout/activity_fab.xml
+++ b/app/src/main/res/layout/activity_fab.xml
@@ -13,11 +13,8 @@
 
 <FrameLayout
     android:layout_width="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginTop="80dp"
-    android:layout_marginBottom="80dp"
-    android:layout_height="match_parent">
+
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,43 +29,115 @@
             android:id="@+id/fab_pic"
             android:scaleType="centerCrop"
             android:src="@drawable/fab_pic"/>
-
-<LinearLayout
+<ScrollView
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
-    >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ABC"
-        android:textSize="50sp"
-        android:layout_margin="16dp"
-        android:background="#00000000"
-        android:textColor="#000000"/>
+    android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/contactsurface"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+android:background="#fff"
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ABC"
-        android:textSize="30sp"
-        android:layout_marginTop="-16dp"
-        android:layout_marginLeft="16dp"
-        android:background="#00000000"
-        android:textColor="#000000"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ABC"
-        android:textSize="30sp"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="16dp"
-        android:background="#00000000"
-        android:textColor="#000000"/>
+            android:orientation="vertical">
 
-</LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:background="#fff"
+                android:fontFamily="sans-serif-condensed"
+                android:text="CONTACT US"
+                android:textColor="#c2c2c2"
+                android:textSize="40sp"
+                android:textStyle="bold"
 
+                />
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:fontFamily="sans-serif-condensed"
+                android:foreground="@drawable/shape9"
+                android:hint="Name"
+                android:onClick="name"
+                android:padding="8dp"
+android:textColor="#000"
+                android:textColorHint="#000"
+                android:textSize="15sp"
+                android:textStyle="italic" />
+
+            <EditText
+                android:id="@+id/mobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:fontFamily="sans-serif-condensed"
+                android:foreground="@drawable/shape9"
+                android:hint="Mobile Number"
+                android:inputType="number"
+                android:padding="8dp"
+                android:textColor="#000"
+                android:textColorHint="#000"
+                android:textSize="15sp"
+                android:textStyle="italic" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:fontFamily="sans-serif-condensed"
+                android:foreground="@drawable/shape9"
+                android:textColor="#000"
+                android:textColorHint="#000"
+                android:hint="Address"
+                android:padding="8dp"
+                android:textSize="15sp"
+                android:textStyle="italic" />
+
+            <EditText
+                android:id="@+id/message"
+                android:layout_width="match_parent"
+
+                android:layout_height="100dp"
+                android:layout_margin="8dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:fontFamily="sans-serif-condensed"
+                android:foreground="@drawable/shape9"
+                android:hint="Query/Message"
+                android:inputType="textLongMessage"
+                android:padding="8dp"
+                android:textSize="15sp"
+                android:textColor="#000"
+                android:textColorHint="#000"
+                android:textStyle="italic" />
+
+            <Button
+                android:id="@+id/submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:background="@drawable/shape10"
+                android:fontFamily="sans-serif-condensed"
+                android:onClick="submit"
+                android:text="send"
+                android:textAllCaps="true"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+</ScrollView>
 </LinearLayout>
 
     <FrameLayout
@@ -88,24 +157,20 @@ android:id="@+id/fab_one"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:elevation="8dp"
-            android:onClick="fabclick1"
 
             android:transitionName="@string/fab1"
             ads:fabSize="normal"
 
             ads:rippleColor="@color/colorAccenta" />
 
-        <TextView
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:background="#00000000"
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:elevation="16dp"
-            android:text="+"
-android:id="@+id/text12"
-            android:textSize="30sp"
-            android:textColor="@android:color/white" />
+            android:foreground="#000"
+            android:layout_gravity="center"
+            android:transitionName="@string/fab2"
+            android:src="@drawable/info"/>
     </FrameLayout>
 
 
