--- a/app/src/main/res/layout/activity_fab.xml
+++ b/app/src/main/res/layout/activity_fab.xml
@@ -2,28 +2,27 @@
 <FrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_fab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.education.rajneesh.jrec.fab">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_height="wrap_content"
+       >
 
-
-
-
-<ScrollView
-    android:layout_width="match_parent"
-    android:background="#fff"
-    android:layout_height="wrap_content">
         <LinearLayout
             android:id="@+id/contactsurface"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-android:background="#fff"
+            android:background="#fff"
 
             android:orientation="vertical">
 
@@ -52,7 +51,7 @@ android:background="#fff"
                 android:hint="Name"
                 android:onClick="name"
                 android:padding="8dp"
-android:textColor="#000"
+                android:textColor="#000"
                 android:textColorHint="#000"
                 android:textSize="15sp"
                 android:textStyle="italic" />
@@ -81,10 +80,10 @@ android:textColor="#000"
                 android:background="?android:attr/selectableItemBackground"
                 android:fontFamily="sans-serif-condensed"
                 android:foreground="@drawable/shape9"
-                android:textColor="#000"
-                android:textColorHint="#000"
                 android:hint="Address"
                 android:padding="8dp"
+                android:textColor="#000"
+                android:textColorHint="#000"
                 android:textSize="15sp"
                 android:textStyle="italic" />
 
@@ -101,9 +100,9 @@ android:textColor="#000"
                 android:hint="Query/Message"
                 android:inputType="textLongMessage"
                 android:padding="8dp"
-                android:textSize="15sp"
                 android:textColor="#000"
                 android:textColorHint="#000"
+                android:textSize="15sp"
                 android:textStyle="italic" />
 
             <Button
@@ -123,7 +122,7 @@ android:textColor="#000"
 
 
         </LinearLayout>
-</ScrollView>
+    </ScrollView>
 
 
-  
+</FrameLayout>
