--- a/app/src/main/res/layout/activity_fab.xml
+++ b/app/src/main/res/layout/activity_fab.xml
@@ -22,8 +22,7 @@
             android:id="@+id/contactsurface"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#fff"
-
+            android:background="@drawable/shape3"
             android:orientation="vertical">
 
             <TextView
