--- a/app/src/main/res/layout/activity_fab.xml
+++ b/app/src/main/res/layout/activity_fab.xml
@@ -7,6 +7,8 @@
     android:id="@+id/activity_fab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#80000000"
+    android:onClick="back"
     tools:context="com.education.rajneesh.jrec.fab">
 
 
