--- a/app/src/main/res/layout/activity_fab.xml
+++ b/app/src/main/res/layout/activity_fab.xml
@@ -112,10 +112,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="8dp"
-                android:backgroundTint="@color/colorAccent"
+                android:backgroundTint="#000"
                 android:fontFamily="sans-serif-condensed"
                 android:onClick="submit"
                 android:text="send"
+                android:transitionName="@string/fab1"
+
                 android:textAllCaps="true"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
