--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -485,11 +485,7 @@
 
         </ScrollView>
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
 
-            android:layout_gravity="bottom|right">
 
             <android.support.design.widget.FloatingActionButton
 
@@ -498,6 +494,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:elevation="8dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
                 ads:backgroundTint="#000"
                 android:onClick="fabclick"
                 android:transitionName="@string/fab1"
@@ -505,9 +503,5 @@
                 ads:rippleColor="#fff" />
 
 
-        </FrameLayout>
-
-
-    </FrameLayout>
 </RelativeLayout>
 
