--- a/app/src/main/res/drawable/shape9.xml
+++ b/app/src/main/res/drawable/shape9.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
 
-    <stroke android:width="2dp" android:color="#0FE2F0" >
+    <stroke android:width="2dp" android:color="#fff" >
 
     </stroke>
 
