--- a/app/src/main/res/layout/activity_aboutexpand.xml
+++ b/app/src/main/res/layout/activity_aboutexpand.xml
@@ -28,7 +28,7 @@ android:layout_centerVertical="true"
                         android:id="@+id/aboutusimage"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:foreground="@drawable/shape"
+                        android:foreground="#80000000"
 
                         android:scaleType="centerCrop"
                         android:src="@drawable/aboutus" />
