--- a/app/src/main/res/layout/activity_coursesexpand.xml
+++ b/app/src/main/res/layout/activity_coursesexpand.xml
@@ -36,7 +36,7 @@
                         android:id="@+id/coursesimage"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:foreground="@drawable/shape"
+                        android:foreground="#80000000"
                         android:scaleType="centerCrop"
                         android:src="@drawable/courses" />
 
