--- a/app/src/main/res/layout/activity_aboutexpand.xml
+++ b/app/src/main/res/layout/activity_aboutexpand.xml
@@ -69,7 +69,7 @@ android:background="#00000000"
                         android:layout_marginTop="8dp"
                         android:background="#F3F3F3"
 
-android:visibility="invisible"
+
 
                         android:fontFamily="sans-serif-condensed"
 android:id="@+id/history"
@@ -79,17 +79,16 @@ android:id="@+id/history"
                         android:padding="4dp"
                         android:text="introduction"
                         android:textAllCaps="true"
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:layout_marginLeft="28dp"
-                        android:visibility="invisible"
                         android:layout_marginTop="8dp"
                         android:background="#F3F3F3"
                         android:fontFamily="sans-serif-condensed"
@@ -99,10 +98,10 @@ android:transitionName="@string/simple3"
                         android:padding="4dp"
                         android:text="contact and location"
                         android:textAllCaps="true"
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -113,16 +112,15 @@ android:transitionName="@string/simple3"
                         android:background="#F3F3F3"
                         android:fontFamily="sans-serif-condensed"
 android:transitionName="@string/simple4"
-                        android:visibility="invisible"
                         android:id="@+id/gallery"
                         android:onClick="galleryclick"
                         android:padding="4dp"
                         android:text="gallery"
                         android:textAllCaps="true"
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
 
 
