--- a/app/src/main/res/layout/activity_coursesexpand.xml
+++ b/app/src/main/res/layout/activity_coursesexpand.xml
@@ -82,10 +82,10 @@ android:background="#00000000"
                         android:padding="4dp"
                         android:text="RS-CIT"
                         android:textAllCaps="true"
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -100,10 +100,10 @@ android:background="#00000000"
                         android:padding="4dp"
                         android:text="TALLY -ERP 9"
                         android:textAllCaps="true"
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -118,10 +118,10 @@ android:background="#00000000"
                         android:padding="4dp"
                         android:text="HARDWARE NETWORKING"
                         android:textAllCaps="true"
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -136,10 +136,10 @@ android:background="#00000000"
                         android:padding="4dp"
                         android:text="PMKVY (Skill Development Course)"
 
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -154,10 +154,10 @@ android:background="#00000000"
                         android:padding="4dp"
                         android:text="Persons with Disability Courses"
 android:textAllCaps="true"
-                        android:textColor="#04ABB6"
+                        android:textColor="#000"
                         android:textSize="20sp"
 
-                        android:textStyle="italic" />
+                        android:textStyle="bold" />
 
 
                 </LinearLayout>
