paper text color

--- a/app/src/main/res/layout/activity_paperexpand.xml
+++ b/app/src/main/res/layout/activity_paperexpand.xml
@@ -93,7 +93,7 @@
                 android:padding="4dp"
                 android:text="hardware basics"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -111,7 +111,7 @@ android:id="@+id/excel"
                 android:padding="4dp"
                 android:text="ms excel"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -130,7 +130,7 @@ android:id="@+id/word"
                 android:padding="4dp"
                 android:text="ms word"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -148,7 +148,7 @@ android:id="@+id/powerpoint"
                 android:padding="4dp"
                 android:text="ms powerpoint"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -166,7 +166,7 @@ android:id="@+id/mix"
                 android:padding="4dp"
                 android:text="mix question"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -184,7 +184,7 @@ android:id="@+id/excelhindi"
                 android:padding="4dp"
                 android:text="ms excel (hindi)"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -203,7 +203,7 @@ android:id="@+id/excelhindi"
                 android:padding="4dp"
                 android:text="ms word (hindi)"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -221,7 +221,7 @@ android:id="@+id/powerpointhindi"
                 android:padding="4dp"
                 android:text="ms powerpoint (hindi)"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -239,7 +239,7 @@ android:id="@+id/computerhindi"
                 android:padding="4dp"
                 android:text="computer (hindi)"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -257,7 +257,7 @@ android:id="@+id/internethindi"
                 android:padding="4dp"
                 android:text="internet (hindi)"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
@@ -276,7 +276,7 @@ android:id="@+id/dbmshindi"
                 android:padding="4dp"
                 android:text="dbms (hindi)"
                 android:textAllCaps="true"
-                android:textColor="#04ABB6"
+                android:textColor="#000"
                 android:textSize="20sp"
 
                 android:textStyle="bold" />
