--- a/app/src/main/res/layout/activity_coursesexpand.xml
+++ b/app/src/main/res/layout/activity_coursesexpand.xml
@@ -8,167 +8,152 @@
     tools:context="com.education.rajneesh.jrec.MainActivity">
 
 
+    <LinearLayout
+        android:id="@+id/coursessurface"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_margin="8dp"
+        android:background="@drawable/shape3"
+        android:elevation="4dp"
+        android:orientation="vertical"
+        android:transitionName="@string/simple1">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="180dp">
+
+            <ImageView
+                android:id="@+id/coursesimage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:foreground="#80000000"
+                android:scaleType="centerCrop"
+                android:src="@drawable/courses" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/coursesimage"
+                android:layout_marginLeft="8dp"
+                android:background="#00000000"
+                android:fontFamily="sans-serif-condensed"
+                android:text="Courses"
+                android:textAllCaps="true"
+                android:textColor="#ffffff"
+                android:textSize="50sp"
+                android:textStyle="bold" />
 
 
+        </RelativeLayout>
 
-
-
-
-
-
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/coursessurface"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:background="#F3F3F3"
-                android:elevation="4dp"
-                android:layout_centerVertical="true"
-                android:transitionName="@string/simple1"
+                android:layout_height="0dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+android:background="#fff"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp">
 
-                    <ImageView
-                        android:id="@+id/coursesimage"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:foreground="#80000000"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/courses" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#fff"                    android:fontFamily="sans-serif-condensed"
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/coursesimage"
-                        android:layout_marginLeft="8dp"
-                        android:fontFamily="sans-serif-condensed"
-android:background="#00000000"
-                        android:text="Courses"
-                        android:textAllCaps="true"
-                        android:textColor="#ffffff"
-                        android:textSize="50sp"
-                        android:textStyle="bold" />
+                    android:onClick="rscitclick"
+                    android:padding="4dp"
+                    android:text="RS-CIT"
+                    android:textAllCaps="true"
+                    android:textColor="#000"
+                    android:textSize="20sp"
 
+                    android:textStyle="bold" />
 
-                </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#fff"
+                    android:fontFamily="sans-serif-condensed"
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="1"
+                    android:onClick="tallyclick"
+                    android:padding="4dp"
+                    android:text="TALLY -ERP 9"
+                    android:textAllCaps="true"
+                    android:textColor="#000"
+                    android:textSize="20sp"
 
-                    android:background="#F3F3F3"
-                    android:orientation="vertical">
+                    android:textStyle="bold" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#fff"
+                    android:fontFamily="sans-serif-condensed"
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="28dp"
-                        android:layout_marginTop="8dp"
-                        android:background="#F3F3F3"
-                        android:fontFamily="sans-serif-condensed"
+                    android:onClick="hardclick"
+                    android:padding="4dp"
+                    android:text="HARDWARE NETWORKING"
+                    android:textAllCaps="true"
+                    android:textColor="#000"
+                    android:textSize="20sp"
 
-                        android:onClick="rscitclick"
-                        android:padding="4dp"
-                        android:text="RS-CIT"
-                        android:textAllCaps="true"
-                        android:textColor="#000"
-                        android:textSize="20sp"
+                    android:textStyle="bold" />
 
-                        android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#fff"
+                    android:fontFamily="sans-serif-condensed"
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="28dp"
-                        android:layout_marginTop="8dp"
-                        android:background="#F3F3F3"
-                        android:fontFamily="sans-serif-condensed"
+                    android:onClick="pmkvyclick"
+                    android:padding="4dp"
+                    android:text="PMKVY (Skill Development Course)"
 
-                        android:onClick="tallyclick"
-                        android:padding="4dp"
-                        android:text="TALLY -ERP 9"
-                        android:textAllCaps="true"
-                        android:textColor="#000"
-                        android:textSize="20sp"
+                    android:textColor="#000"
+                    android:textSize="20sp"
 
-                        android:textStyle="bold" />
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="28dp"
-                        android:layout_marginTop="8dp"
-                        android:background="#F3F3F3"
-                        android:fontFamily="sans-serif-condensed"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="28dp"
+                    android:layout_marginTop="8dp"
+                    android:background="#fff"
+                    android:fontFamily="sans-serif-condensed"
 
-                        android:onClick="hardclick"
-                        android:padding="4dp"
-                        android:text="HARDWARE NETWORKING"
-                        android:textAllCaps="true"
-                        android:textColor="#000"
-                        android:textSize="20sp"
+                    android:onClick="pwdclick"
+                    android:padding="4dp"
+                    android:text="Persons with Disability Courses"
+                    android:textAllCaps="false"
+                    android:textColor="#000"
+                    android:textSize="20sp"
 
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="28dp"
-                        android:layout_marginTop="8dp"
-                        android:background="#F3F3F3"
-                        android:fontFamily="sans-serif-condensed"
-
-                        android:onClick="pmkvyclick"
-                        android:padding="4dp"
-                        android:text="PMKVY (Skill Development Course)"
-
-                        android:textColor="#000"
-                        android:textSize="20sp"
-
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="28dp"
-                        android:layout_marginTop="8dp"
-                        android:background="#F3F3F3"
-                        android:fontFamily="sans-serif-condensed"
-
-                        android:onClick="pwdclick"
-                        android:padding="4dp"
-                        android:text="Persons with Disability Courses"
-android:textAllCaps="true"
-                        android:textColor="#000"
-                        android:textSize="20sp"
-
-                        android:textStyle="bold" />
+                    android:textStyle="bold" />
 
 
-                </LinearLayout>
-
-</ScrollView>
             </LinearLayout>
 
-
-
-
-
+        </ScrollView>
+    </LinearLayout>
 
 
 </RelativeLayout>
